# easy-enum

./: Cargo.toml  README.md
src/: main.rs
